test/types/typedefs/bradc/redefineTypeNames2a.good
redefineTypeNames2a.chpl:4: syntax error: near 'int'
